results/experiments/1_10/1427/2026-04-29_05-27-45/selection/batfish/candidate_1_vs_candidate_2_reachability.txt
--- Analyzing results/experiments/2026-04-29_05-20-44/1427/2026-04-29_05-27-45/candidates: candidate_1 vs candidate_2 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.8.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.84, Routes: [ospfE2 (Network: 100.0.8.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.84)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet3/0 with resolved next-hop IP: 10.0.0.44, Routes: [ospfE2 (Network: 100.0.8.0/24, Next Hop: interface FastEthernet3/0 ip 10.0.0.44)]), TRANSMITTED(FastEthernet3/0)), (RECEIVED(FastEthernet [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
